# boost-your-python-scientific-computation

./: .clang-format  benchmark.py  benchmark_all.py  main.py  requirements.txt
with_cupy/: __init__.py  lib.py  main.py
with_cython/: .gitignore  Makefile  __init__.py  lib.pyx  main.py  setup.py
with_dask/: __init__.py  lib.py  main.py
with_numba/: lib.py  main.py
with_numba_aot/: build.py  main.py
with_numpy/: lib.py
with_pybind11/: CMakeLists.txt  __init__.py  lib.pyi  main.py  setup.py
with_pybind11/src/: lib.cpp
with_python/: __init__.py  lib.py  main.py
with_pythran/: Makefile  lib.py  main.py
with_pythran_omp/: Makefile  lib.py
